2000-02-12  Dave Love  <fx@gnu.org>

	* frame.h (SELECTED_FRAME): Use NULL, not 0 to avoid warnings on
	Alpha.

2000-02-12  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (syms_of_xdisp): Doc fix for scroll-conservatively.

2000-02-12  Dave Love  <fx@gnu.org>

	* s/aix3-2.h, s/osf-1.h: Define C_DEBUG_SWITCH for non-gcc.

	* s/ux4800.h, s/umips.h, s/umax.h, s/sol2.h, s/sco5.h, s/rtu.h:
	* s/ptx4.h, s/umax.h, s/dgux.h, s/bsd4-2.h, s/bsd4-3.h:
	* s/hpux.h: Don't define HAVE_VFORK.

	* s/gnu-linux.h: Don't define HAVE_VFORK or HAVE_SYS_SIGLIST.

	* s/nextstep.h: Don't define HAVE_ALLOCA.

	* config.in: Add vfork bits.

2000-02-12  Gerd Moellmann  <gerd@gnu.org>

	* process.c (Fopen_network_stream) [POLL_FOR_INPUT]: Register
	unwind function to undo the effect of stopping atimers.

	* keyboard.c (bind_polling_period): Stop all timers except
	poll_timer.

	* atimer.c (stopped_atimers): New variable.
	(stop_other_atimers, run_all_atimers, unwind_stop_other_atimers):
	New functions.

	* atimer.h (stop_other_atimers, run_all_atimers)
	(unwind_stop_other_atimers): Add function prototypes.
	
	* s/hpux10.h (HAVE_XRMSETDATABASE): Define if not already defined.

2000-02-11  Ken Raeburn  <raeburn@gnu.org>

	* Makefile.in (LIBX): Link in tiff library before jpeg, since tiff
	library may depend on jpeg.
	(atimer.o): Depends on atimer.c.

2000-02-11  Kenichi Handa  <handa@etl.go.jp>

	* insdel.c (del_range_1): Call update_compositions.
	(del_range_both): Call update_compositions just once..

2000-02-10  Dave Love  <fx@gnu.org>

	* xfns.c (create_frame_xic): Fix initialization of automatic
	aggregates for pcc.

2000-02-09  Kenichi Handa  <handa@etl.go.jp>

	* ccl.c (CCL_MAKE_CHAR): New macro.
	(ccl_driver) <CCL_TranslateCharacter>: Check the validity of
	registers by CCL_MAKE_CHAR before calling translate_char.
	<CCL_TranslateCharacterConstTbl> Likewise.

2000-02-08  Dave Love  <fx@gnu.org>

	* lread.c (__EXTENSIONS__): Define.

2000-02-08  Gerd Moellmann  <gerd@gnu.org>
